# openzim-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt
openzim_mcp/: async_operations.py  config.py  constants.py  defaults.py  exceptions.py  main.py  server.py  zim_operations.py
openzim_mcp/tools/: __init__.py  content_tools.py  file_tools.py  metadata_tools.py  navigation_tools.py  resource_tools.py  search_tools.py  structure_tools.py
