[project]
name = "openzim-mcp"
version = "0.9.0"
description = "OpenZIM MCP - ZIM MCP Server that enables AI models to access and search ZIM format knowledge bases offline"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
maintainers = [
    {name = "Cameron Rye", email = "c@meron.io"},
]
keywords = [
    "zim",
    "openzim",
    "mcp",
    "model-context-protocol",
    "ai",
    "llm",
    "knowledge-base",
    "offline",
    "wikipedia",
    "search",
    "libzim",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Database",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "html2text>=2025.4.15",
    "libzim>=3.8.0",
    "mcp[cli]>=1.23.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.12.0",
]

[project.urls]
Homepage = "https://github.com/cameronrye/openzim-mcp"
Repository = "https://github.com/cameronrye/openzim-mcp.git"
Issues = "https://github.com/cameronrye/openzim-mcp/issues"
Changelog = "https://github.com/cameronrye/openzim-mcp/blob/main/CHANGELOG.md"
Documentation = "https://github.com/cameronrye/openzim-mcp#readme"
"Security Policy" = "https://github.com/cameronrye/openzim-mcp/blob/main/SECURITY.md"
"Contributing" = "https://github.com/cameronrye/openzim-mcp/blob/main/CONTRIBUTING.md"

[project.scripts]
openzim-mcp = "openzim_mcp.__main__:main"

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["openzim_mcp*"]
